--- a/Frontend/src/components/card.scss
+++ b/Frontend/src/components/card.scss
@@ -2,9 +2,42 @@
 
 
 
+.card {
+  display: flex;
+  flex-direction:column;
+  align-items: flex-end;
+  margin: 0;
+  padding:0.5rem;
+  flex-grow: 0;
+  width: 100%;
+}
+
+.card__container {
+  background-color: $White;
+  padding:1rem;
+
+  width: 100%; 
+  min-height: 4rem;
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+  border-bottom-left-radius: 1rem;
+  position: relative;
+  // Lägg till skugga under card__container
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); // Skugga under card__container
+}
+
+.card__bottom {
+  width: 0;
+  height: 0;
+  border-right: 2rem solid transparent;
+  border-top: 2rem solid $White;
+}
+
+
+
 .card_date {
   color:$Black-60;
-  padding-left: 2rem;
+  padding-left: 1rem;
 }
 
 .card_message {
