--- a/Frontend/src/scss/typography.scss
+++ b/Frontend/src/scss/typography.scss
@@ -20,7 +20,8 @@ h2 {
   font-weight: 800;
   font-style: bold;
   font-size:4rem;
-  margin:0.4rem 0;
+  margin:2rem;
+
 }
 
 h3 {
@@ -39,6 +40,13 @@ p {
   .font-small {
     font-size: 0.8rem;
     margin: 0;
+  }
+
+  .btn {
+    font-family: PT Sans;
+    color: $Black;
+    line-height: 150%;
+    font-size: 1rem;
   }
 
  
