--- a/Frontend/src/App.scss
+++ b/Frontend/src/App.scss
@@ -6,7 +6,9 @@
 #root {
   width: 100%;
   height: 100%;
-  
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 0rem;
 }
 
 * {
@@ -19,32 +21,74 @@ html, body {
   margin: 0;
   padding:  0;
   width: 100%;
-  height: 100%;
-  display: flex; 
-  flex-direction: column;
-  justify-content: center; 
   background-color:$Black;
 }
 
+.header {
+padding:0 1rem;
+margin-bottom: 2rem;
+  display: flex;
+  flex-direction: row;
+  width:100%;
+  align-items: center;
+  gap:1rem;
+  flex-shrink: 0;
+}
 
-.writeMsg {
+
+.flow {
   display: flex;
   flex-direction: column;
-  margin-top: 60px;
-  height: 100%;
+  height: 100vh; // Gör att flödet tar upp hela höjden på skärmen
+  position: relative;
+}
+
+.writeMsg , .flow{
+  display: flex;
+  flex-direction: column;
+}
+
+.noMsg {
+  display: flex;
+  flex-direction: column;
+ align-items: center;
+ justify-content: center;
+ height: 100vh;
 }
 
 .form_container {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  height: 100%;
+  align-items: center;
+
+}
+.form_container >.card {
+  min-height: 20rem;
+ padding: 0 2rem;
+}
+
+
+.card_flow {
+  flex-grow: 1; // Gör att denna sektion fyller tillgänglig höjd
+  overflow-y: auto; // Aktivera vertikal scroll när det behövs
+  padding: 1rem;
+}
+
+.form_container >.card >.card__container {
+ @extend p;
+text-align: left;
+vertical-align: text-top;
+flex-grow: 1;
 }
 
 .form__bottom {
   padding: 2rem;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  align-items: center;
+  position: absolute;
+  bottom: 10px;
+  width:100%;
 }
 
 
@@ -52,6 +96,11 @@ html, body {
   margin-bottom: 1rem;
   padding:1rem;
   width: 100%;
+  background-color: $Black;
+  border:1px solid $White;
+  border-radius: $Radius;
+  @extend p;
+  color:$White;
 }
 
 .submitBtn {
@@ -59,7 +108,10 @@ html, body {
   width: 100%;
   background-color: $Red;
   padding:1rem;
+  border-radius: $Radius;
 }
+
+
 
 
 @media (min-width: 768px) {
@@ -68,6 +120,10 @@ html, body {
     margin: 0 auto; /* Centrerar root-elementet när skärmen är bredare än 768px */
   }
 }
+
+
+
+
 
 
 
