--- a/Frontend/src/components/cancelBtn.scss
+++ b/Frontend/src/components/cancelBtn.scss
@@ -3,15 +3,12 @@
 
 .cancelBtn{
   background-color: $Turkos;
-  width:3rem;
-  height:3rem;
-  position: absolute; 
-  left: 10px; 
-  top: 10px;
-  padding:10px;
+  width:4rem;
+  height:4rem;
+
   background-image : url('../../public/BackArrow.svg');
   background-size: calc(100% - 20px);  
   background-position: center;
   background-repeat: no-repeat;
-  border-radius: 0.5rem;
+  border-radius: $Radius;
 }
