--- a/Frontend/src/components/card.scss
+++ b/Frontend/src/components/card.scss
@@ -34,11 +34,26 @@
 }
 
 
+.card_top {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.card_top_image {
+  width:1.2rem;
+  height:1.3rem;
+  background-image : url('../../public/trashbin.svg');
+  background-position: center;
+  background-repeat: no-repeat;
+}
 
 .card_date {
   color:$Black-60;
   padding-left: 1rem;
 }
+
+
 
 .card_message {
   color:$Black;
