--- a/Frontend/src/scss/typography.scss
+++ b/Frontend/src/scss/typography.scss
@@ -3,7 +3,7 @@
 
 
 body {
-  font-family: PT Sans;
+  font-family: PT Sans, sans-serif;
   color: $Black;
   line-height: 150%;
 }
@@ -18,10 +18,11 @@ h1 { color:#F56B9A;
 h2 {
   color:#ffffff; 
   font-weight: 800;
-  font-style: bold;
-  font-size:4rem;
+  font-size:2rem;
   margin:2rem;
-
+  text-align: center;
+  line-height: 150%;
+  padding: 2rem;
 }
 
 h3 {
@@ -31,6 +32,7 @@ h3 {
 
 
 p {
+  font-family: PT Sans;
   font-size: 1rem;
   line-height: 150%;
   margin:0;
@@ -46,7 +48,8 @@ p {
     font-family: PT Sans;
     color: $Black;
     line-height: 150%;
-    font-size: 1rem;
+    font-weight: 800;
+    font-size: 1.2rem;
   }
 
  
